[package]
name = "indxdb"
publish = true
edition = "2021"
version = "0.10.0"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "A key-value database engine abstraction layer for IndexedDB running in WASM"
repository = "https://github.com/surrealdb/indxdb"
homepage = "https://github.com/surrealdb/indxdb"
keywords = ["database", "embedded-database", "indexeddb", "idb", "wasm"]
categories = ["database-implementations", "web-programming", "wasm"]
license = "Apache-2.0"

[dependencies]
js-sys = "0.3.82"
rexie = "0.6.2"
thiserror = "2.0.17"
wasm-bindgen = { version = "0.2.105" }
web-sys = "0.3.82"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
